add snapdragon camera
Change-Id: Ie45b4363d64818542d2ff0c0e9a17d896ac7e131

Signed-off-by: RazorSharp <kirananto@gmail.com>

--- a/res/xml/default_workspace_5x6.xml
+++ b/res/xml/default_workspace_5x6.xml
@@ -205,7 +205,7 @@
         launcher:x="5"
         launcher:y="0" >
         <favorite
-            launcher:packageName="com.cyngn.cameranext"
+            launcher:packageName="org.codeaurora.snapcam"
             launcher:className="com.android.camera.CameraLauncher" />
         <favorite
             launcher:packageName="com.android.camera2"
